# kaban

./: CMakeLists copy.txt  CMakeLists good.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ideas  imgui.ini  statements
.cache/clangd/index/: board.cpp.D20BDE9971706AA2.idx  board.hpp.56B27945A7901D5F.idx  buffer.cpp.86EFDBFF6AE8C52E.idx  buffer.hpp.CC19BC177E4501B3.idx  error_bus.cpp.C4BCD670B4F36330.idx  error_bus.hpp.32DCA31037754D97.idx  error_handler.cpp.8E3FB05205D0A937.idx  error_handler.hpp.AAA3108E72964D26.idx  event_bus.hpp.1112092E2E2CA7E5.idx  game.cpp.6C3C5D9ED22EE2B9.idx  game.hpp.5CECEEB176865624.idx  glfw_wrapper.cpp.2EB4562E791EFAB2.idx  glfw_wrapper.hpp.B8EA18066CAB587F.idx  imgui_wrapper.cpp.12F4BE69BD26DB79.idx  imgui_wrapper.hpp.41CC2A1BC415AF70.idx  input_bus.cpp.6A5C0344B664873F.idx  input_bus.hpp.6DA38B10A11232E0.idx  input_handler.cpp.3B0E95B17BBFC727.idx  input_handler.hpp.D0B71B03B4636E37.idx  layout_manager.hpp.216ED767EFC8FD60.idx  main.cpp.2C4396AA40FC2124.idx  message_bus.cpp.466017498EA78650.idx  message_bus.hpp.F57D52A3A99B53A6.idx  navigation.cpp.2B9C16752A389E04.idx  navigation.hpp.0944BD3EF4E39837.idx  position.cpp.C7DA5338199E9F9A.idx  position.hpp.20DDBD7A9D972D40.idx  renderer.cpp.60051DBD9EF8D3AC.idx  renderer.hpp.1E939E62BAF70661.idx  tests.cpp.460CCFA002498563.idx  texture_loader.cpp.C43266FB41387888.idx  texture_loader.hpp.2F29A54597B2F4AE.idx  texture_loarder.hpp.F3C81184B504AD69.idx  userio.hpp.37E3D2EC135B84BB.idx
include/: board.hpp  buffer.hpp  constants.hpp  dynamic_array.hpp  error_bus.hpp  error_handler.hpp  event_bus.hpp  game.hpp  glfw_wrapper.hpp  imgui_wrapper.hpp  input_bus.hpp  input_handler.hpp  layout_manager.hpp  message_bus.hpp  navigation.hpp  opengl.hpp  position.hpp  renderer.hpp  texture_loader.hpp  types.hpp  userio.hpp
old cmakes/: CMakeLists best.txt  CMakeLists good.txt  CMakeLists last.txt
src/: board.cpp  error_bus.cpp  error_handler.cpp  game.cpp  glfw_wrapper.cpp  imgui_wrapper.cpp  input_bus.cpp  input_handler.cpp  main.cpp  message_bus.cpp  navigation.cpp  position.cpp  renderer.cpp  texture_loader.cpp
tests/: tests.cpp
